--- a/Navie_Bayes.ipynb
+++ b/Navie_Bayes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "06c6cfb9",
+   "id": "fd29ad15",
    "metadata": {},
    "source": [
     "## Navie Bayes in KDB+"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "c6ae05fb",
+   "id": "c82acd71",
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "a9d60aeb",
+   "id": "4e26f0b7",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "b39d8803",
+   "id": "f4fae15a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "ac2e8202",
+   "id": "3788e9f6",
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "e8e8a4c0",
+   "id": "f12cddf8",
    "metadata": {},
    "outputs": [
     {
@@ -115,29 +115,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "acd5fcbe",
+   "execution_count": 43,
+   "id": "16a22f43",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "11111111111111111111111111b\n"
+       "{$[(x in (key w));w[x]+:1;w[x]:1]}\n",
+       "{$[(x in (key w));w[x]+:1;w[x]:1]}\n",
+       "{$[(x in (key w));w[x]+:1;w[x]:1]}\n",
+       "{$[(x in (key w));w[x]+:1;w[x]:1]}\n",
+       "{$[(x in (key w));w[x]+:1;w[x]:1]}\n",
+       "{$[(x in (key w));w[x]+:1;w[x]:1]}\n",
+       "{$[(x in (key w));w[x]+:1;w[x]:1]}\n",
+       "{$[(x in (key w));w[x]+:1;w[x]:1]}\n",
+       "{$[(x in (key w));w[x]+:1;w[x]:1]}\n",
+       "{$[(x in (key w));w[x]+:1;w[x]:1]}\n",
+       "{$[(x in (key w));w[x]+:1;w[x]:1]}\n",
+       "{$[(x in (key w));w[x]+:1;w[x]:1]}\n",
+       "{$[(x in (key w));w[x]+:1;w[x]:1]}\n"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "{w:()!(); {$[(x in (key w));w[x]+:1;w[x]:1]}}'[pos_lis,neg_lis]"
+    "{w:()!(); {$[(x in (key w));w[x]+:1;w[x]:1]}}'[pos_lis]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7f55bfa",
+   "id": "6193a2e6",
    "metadata": {},
    "outputs": [],
    "source": []
