--- a/Navie_Bayes.ipynb
+++ b/Navie_Bayes.ipynb
@@ -326,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": 229,
-   "id": "e8b8e5de",
+   "id": "ca96b529",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "f5b6e7c0",
+   "id": "fde22db4",
    "metadata": {},
    "source": [
     "## Example: \n",
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 230,
-   "id": "8c59c1fb",
+   "id": "d1c9bfa6",
    "metadata": {},
    "outputs": [
     {
@@ -391,14 +391,16 @@
    ],
    "source": [
     "/Get the probability value of each word present in positive and negative\n",
-    "/ pos_prob = freq_of_word % total_\n",
+    "/ pos_prob = freq_of_word % total_pos_word\n",
+    "/ neg_prob = freq_of_word % total_neg_word\n",
+    "/ pos_prob % neg_prob\n",
     "get_val'[test]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 222,
-   "id": "10b6b825",
+   "id": "12ca1fd9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": 223,
-   "id": "eeffd99d",
+   "id": "bd907a9f",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "9c9ed453",
+   "id": "bf35d6ab",
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 227,
-   "id": "9cc466d3",
+   "id": "fe02e0ba",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 228,
-   "id": "25bdcf6a",
+   "id": "ef3d2fa3",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e129be2f",
+   "id": "a028ab10",
    "metadata": {},
    "outputs": [],
    "source": []
