--- a/Data Preprocessing and Word cloud in KDB+q.ipynb
+++ b/Data Preprocessing and Word cloud in KDB+q.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 154,
    "id": "501b305d",
    "metadata": {},
    "outputs": [],
@@ -12,6 +12,13 @@
     "In this note book I just explore the embedpy feature of kdb+/q\n",
     "\n",
     "First of all import necessary python packages\n",
+    "\n",
+    "Requirements\n",
+    "\n",
+    "kdb+>=? v3.5 64-bit\n",
+    "Python 3.x\n",
+    "embedPy\n",
+    "JupyterQ\n",
     "\n",
     "\n",
     "\\\n",
@@ -30,7 +37,7 @@
    "source": [
     "/load the IMBD csv file size 31MB\n",
     "\n",
-    "df:(\"***\";enlist csv)0:`:/home/senthil/Data/Ed/repo/mlnotebooks/data/IMBD.csv"
+    "df:(\"***\";enlist csv)0:`:...../IMBD.csv"
    ]
   },
   {
@@ -101,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9511bb7",
+   "id": "7ee9d754",
    "metadata": {},
    "source": [
     "### Data Preprocessing"
@@ -168,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0f49f14",
+   "id": "0ea8cb18",
    "metadata": {},
    "source": [
     "### Build frequency"
@@ -215,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "99394623",
+   "id": "6db5dea5",
    "metadata": {},
    "outputs": [
     {
@@ -341,14 +348,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2352367f",
+   "id": "85593be2",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "1b0aaa11",
+   "id": "1a659bab",
    "metadata": {},
    "source": [
     "## Word Cloud"
@@ -357,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "9da92a1b",
+   "id": "3c595cb6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "fab6b0ff",
+   "id": "39e5707d",
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03909ec4",
+   "id": "7dce36e2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -417,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "6957f1d5",
+   "id": "469d0290",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "4bd77071",
+   "id": "cf3ce58d",
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6391059a",
+   "id": "ecf474ee",
    "metadata": {},
    "outputs": [],
    "source": []
