--- a/Data Preprocessing and Word cloud in KDB+q.ipynb
+++ b/Data Preprocessing and Word cloud in KDB+q.ipynb
@@ -36,6 +36,7 @@
    "outputs": [],
    "source": [
     "/load the IMBD csv file size 31MB\n",
+    "/ get data from https://github.com/KxSystems/mlnotebooks/blob/master/data/IMBD.csv\n",
     "\n",
     "df:(\"***\";enlist csv)0:`:...../IMBD.csv"
    ]
@@ -108,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ee9d754",
+   "id": "054b6d30",
    "metadata": {},
    "source": [
     "### Data Preprocessing"
@@ -175,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ea8cb18",
+   "id": "6442c06c",
    "metadata": {},
    "source": [
     "### Build frequency"
@@ -222,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "6db5dea5",
+   "id": "c6575096",
    "metadata": {},
    "outputs": [
     {
@@ -348,14 +349,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85593be2",
+   "id": "f01f2be5",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "1a659bab",
+   "id": "7f2c169a",
    "metadata": {},
    "source": [
     "## Word Cloud"
@@ -364,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "3c595cb6",
+   "id": "e9d9f583",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "39e5707d",
+   "id": "6746c40c",
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7dce36e2",
+   "id": "8dffd963",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -424,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "469d0290",
+   "id": "eeeb8bd0",
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "cf3ce58d",
+   "id": "6d89ef31",
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecf474ee",
+   "id": "db12f93d",
    "metadata": {},
    "outputs": [],
    "source": []
