Word count generated

--- a/KDB_ML/Logistic_regression/Logistics_Regression_in_KDB.ipynb
+++ b/KDB_ML/Logistic_regression/Logistics_Regression_in_KDB.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbdfac52",
+   "id": "ab2c0a7e",
    "metadata": {},
    "source": [
     "# Reading Json"
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "af63f097",
+   "id": "d78f700c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "2d1e941d",
+   "id": "579d33b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "013e764f",
+   "id": "26c65ad6",
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "7586d309",
+   "id": "aea43503",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "a4b1d28b",
+   "id": "4cd56f82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "9d434958",
+   "id": "026ae2e7",
    "metadata": {},
    "outputs": [
     {
@@ -247,72 +247,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "9f717ca4",
+   "execution_count": 58,
+   "id": "f50e733c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"FollowFriday\"  1\n",
-       "\"@France_Inte\"  1\n",
-       "\"@PKuchly57\"    1\n",
-       "\"@Milipol_Pari\" 1\n",
-       "\"for\"           1\n",
-       "\"be\"            1\n",
-       "\"top\"           1\n",
-       "\"engag\"         1\n",
-       "\"member\"        1\n",
-       "\"in\"            1\n",
-       "\"my\"            1\n",
-       "\"community\"     1\n",
-       "\"thi\"           1\n",
-       "\"week\"          1\n",
-       "\":)\"            1\n",
-       "\"@Lamb2ja\"      1\n",
-       "\"Hey\"           1\n",
-       "\"James!\"        1\n",
-       "\"How\"           1\n",
-       "\"odd\"           1\n",
-       "\":/\"            1\n",
-       "\"Please\"        1\n",
-       "..\n"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "raze {[x] sent::df[x][`sentiment];{(x;sent)}'[ df[x][`words]]}'[til count df]"
+    "word_count: desc count each group (raze {[x] sent::df[x][`sentiment];{(x;sent)}'[ df[x][`words]]}'[til count df])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "4104f6ee",
+   "execution_count": 59,
+   "id": "245684ba",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10 10 10 10 10 10 10 10 10 10 10 10 10 10 10h\n"
+       "\":(\"  0| 3723\n",
+       "\":)\"  1| 3154\n",
+       ",\"I\"  0| 1490\n",
+       "\"you\" 1| 1205\n",
+       "\"to\"  0| 1062\n",
+       "\"to\"  1| 1054\n",
+       "\"the\" 1| 994\n",
+       ",\"a\"  1| 877\n",
+       ",\"I\"  1| 844\n",
+       "\"the\" 0| 844\n",
+       "\"for\" 1| 747\n",
+       "\"and\" 1| 647\n",
+       "\"my\"  0| 626\n",
+       ",\"a\"  0| 625\n",
+       "\":-)\" 1| 615\n",
+       "\"and\" 0| 611\n",
+       "\":D\"  1| 609\n",
+       ",\"i\"  0| 604\n",
+       "\"you\" 0| 589\n",
+       "\"my\"  1| 480\n",
+       "\"in\"  1| 477\n",
+       "\"it\"  0| 466\n",
+       "..\n"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type each df[0][`words]"
+    "word_count"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49b1004b",
+   "id": "f230f569",
    "metadata": {},
    "outputs": [],
    "source": []
