--- a/KDB_ML/Logistic_regression/Logistics_Regression_in_KDB.ipynb
+++ b/KDB_ML/Logistic_regression/Logistics_Regression_in_KDB.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "b406d277",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "a2515b78",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
        "179\n"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,22 +54,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "d3937062",
    "metadata": {},
    "outputs": [],
    "source": [
     "/ Get the all punctuations from python's string module\n",
-    "punctuations:.p.qeval\"string.punctuation\""
+    "/punctuations:.p.qeval\"string.punctuation\"\n",
+    "punctuations:\"!\\\"#$%&'()*+,-./:;<=>?@[\\\\]^_`{|}~\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "c1d77586",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       ",\"i\"\n",
+       "\"me\"\n",
+       "\"my\"\n",
+       "\"myself\"\n",
+       "\"we\"\n",
+       "\"our\"\n",
+       "\"ours\"\n",
+       "\"ourselves\"\n",
+       "\"you\"\n",
+       "\"you're\"\n",
+       "\"you've\"\n",
+       "\"you'll\"\n",
+       "\"you'd\"\n",
+       "\"your\"\n",
+       "\"yours\"\n",
+       "\"yourself\"\n",
+       "\"yourselves\"\n",
+       "\"he\"\n",
+       "\"him\"\n",
+       "\"his\"\n",
+       "\"himself\"\n",
+       "\"she\"\n",
+       "..\n"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stop_words"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "id": "d78f700c",
    "metadata": {},
    "outputs": [],
@@ -93,18 +129,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "id": "579d33b1",
    "metadata": {},
    "outputs": [],
    "source": [
     "df1: select text from df1;\n",
+    "update text:lower(text) from `df1;\n",
     "update sentiment:1 from `df1;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "id": "26c65ad6",
    "metadata": {},
    "outputs": [
@@ -113,12 +150,12 @@
       "text/plain": [
        "text                                                                         ..\n",
        "-----------------------------------------------------------------------------..\n",
-       "\"#FollowFriday @France_Inte @PKuchly57 @Milipol_Paris for being top engaged m..\n",
-       "\"@Lamb2ja Hey James! How odd :/ Please call our Contact Centre on 02392441234..\n",
-       "\"@DespiteOfficial we had a listen last night :) As You Bleed is an amazing tr..\n"
+       "\"#followfriday @france_inte @pkuchly57 @milipol_paris for being top engaged m..\n",
+       "\"@lamb2ja hey james! how odd :/ please call our contact centre on 02392441234..\n",
+       "\"@despiteofficial we had a listen last night :) as you bleed is an amazing tr..\n"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "id": "aea43503",
    "metadata": {},
    "outputs": [],
@@ -137,13 +174,14 @@
     "/Negative\n",
     "l:(read0 `:/home/senthil/Data/notebook/NLP/NLP_Explore_KDB/data/twitter_samples/negative_tweets.json)\n",
     "df2 : (uj/){(enlist .j.k x)}'[l]\n",
+    "update text:lower(text) from `df2;\n",
     "df2: select text from df2;\n",
     "update sentiment:0 from `df2;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "id": "4cd56f82",
    "metadata": {},
    "outputs": [],
@@ -153,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "id": "026ae2e7",
    "metadata": {},
    "outputs": [
@@ -163,7 +201,7 @@
        "10000\n"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "id": "68e82c7f",
    "metadata": {},
    "outputs": [],
@@ -200,7 +238,7 @@
     "    l:\" \" vs tweet;\n",
     "    l:l where not any l like/: (\"$*\";\"http*\");\n",
     "    tweet: \" \" sv l;\n",
-    "    tweet: tweet except \"#\";\n",
+    "    tweet: tweet except punctuations;\n",
     "    :tweet\n",
     "    };\n",
     "\n",
@@ -209,12 +247,12 @@
     "    :(\" \" vs tweet)\n",
     "    };\n",
     "\n",
-    "preprocess_nd_stem:{{.[stemmer;enlist x;x]}'[preprocessing x]};"
+    "preprocess_nd_stem:{{.[stemmer;enlist x;x]}'[(preprocessing x) except stop_words]};"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "id": "078c1ab3",
    "metadata": {},
    "outputs": [],
@@ -224,19 +262,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "id": "0a0e3839",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(\"FollowFriday\";\"@France_Inte\";\"@PKuchly57\";\"@Milipol_Pari\";\"for\";\"be\";\"top\";..\n",
-       "(\"@Lamb2ja\";\"Hey\";\"James!\";\"How\";\"odd\";\":/\";\"Please\";\"call\";\"our\";\"Contact\";\"..\n",
-       "(\"@DespiteOfficial\";\"we\";\"had\";,\"a\";\"listen\";\"last\";\"night\";\":)\";\"As\";\"You\";\"..\n"
+       "(\"followfriday\";\"franceinte\";\"pkuchly57\";\"milipolpari\";\"top\";\"engag\";\"member\"..\n",
+       "(\"lamb2ja\";\"hey\";\"jame\";\"odd\";\"\";\"please\";\"call\";\"contact\";\"centre\";\"02392441..\n",
+       "(\"despiteofficial\";\"listen\";\"last\";\"night\";\"\";\"ble\";\"amaz\";\"track\";\"scotland\")\n"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 40,
    "id": "f50e733c",
    "metadata": {},
    "outputs": [],
@@ -257,39 +295,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 41,
    "id": "245684ba",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\":(\"  0| 3723\n",
-       "\":)\"  1| 3154\n",
-       ",\"I\"  0| 1490\n",
-       "\"you\" 1| 1205\n",
-       "\"to\"  0| 1062\n",
-       "\"to\"  1| 1054\n",
-       "\"the\" 1| 994\n",
-       ",\"a\"  1| 877\n",
-       ",\"I\"  1| 844\n",
-       "\"the\" 0| 844\n",
-       "\"for\" 1| 747\n",
-       "\"and\" 1| 647\n",
-       "\"my\"  0| 626\n",
-       ",\"a\"  0| 625\n",
-       "\":-)\" 1| 615\n",
-       "\"and\" 0| 611\n",
-       "\":D\"  1| 609\n",
-       ",\"i\"  0| 604\n",
-       "\"you\" 0| 589\n",
-       "\"my\"  1| 480\n",
-       "\"in\"  1| 477\n",
-       "\"it\"  0| 466\n",
+       "\"\"       0| 5699\n",
+       "\"\"       1| 5274\n",
+       "\"thank\"  1| 622\n",
+       "\"im\"     0| 468\n",
+       "\"follow\" 1| 362\n",
+       "\"love\"   1| 340\n",
+       "\"want\"   0| 244\n",
+       "\"day\"    1| 240\n",
+       ",\"u\"     1| 240\n",
+       "\"mis\"    0| 237\n",
+       "\"im\"     1| 234\n",
+       "\"please\" 0| 233\n",
+       "\"good\"   1| 231\n",
+       "\"dont\"   0| 228\n",
+       "\"cant\"   0| 226\n",
+       "\"follow\" 0| 225\n",
+       "\"go\"     0| 221\n",
+       "\"like\"   1| 220\n",
+       "\"like\"   0| 209\n",
+       "\"happy\"  1| 193\n",
+       "\"get\"    0| 188\n",
+       ",\"u\"     0| 188\n",
        "..\n"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
