Logistic Regression Added

--- a/Logistic_Regression/Logistic_Regression.ipynb
+++ b/Logistic_Regression/Logistic_Regression.ipynb
@@ -5,7 +5,9 @@
    "id": "6f977338",
    "metadata": {},
    "source": [
-    "#  Logistic Regression"
+    "#  Logistic Regression in KDB+\n",
+    "\n",
+    "## Find sentiment of tweet (Binary Classification)"
    ]
   },
   {
@@ -23,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf970b04",
+   "id": "b768eb59",
    "metadata": {},
    "source": [
     "### Prepare the data\n",
@@ -192,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b9cf9e3",
+   "id": "7bd239ca",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -200,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47eccf57",
+   "id": "dc2b16c5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -376,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 400,
-   "id": "50000457",
+   "id": "6793466e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "825acf3d",
+   "id": "0c366b56",
    "metadata": {},
    "source": [
     "## Process tweet\n",
@@ -405,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 401,
-   "id": "55f2928a",
+   "id": "40ddf055",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": 402,
-   "id": "0b4177e5",
+   "id": "d720f286",
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93651ada",
+   "id": "9196ae15",
    "metadata": {},
    "source": [
     "## Extracting the features\n",
@@ -456,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 403,
-   "id": "a8f7728e",
+   "id": "4b2d9a63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 404,
-   "id": "a89fab32",
+   "id": "d8d4040a",
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd934c88",
+   "id": "28771577",
    "metadata": {},
    "source": [
     "## Training Model\n",
@@ -506,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 405,
-   "id": "ed6931cb",
+   "id": "d62c2682",
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 406,
-   "id": "faf24424",
+   "id": "deb19bc7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 407,
-   "id": "040bf52f",
+   "id": "3ac0b302",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": 408,
-   "id": "a7d82c30",
+   "id": "768aed4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": 409,
-   "id": "c0c98379",
+   "id": "0943923b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 410,
-   "id": "30f378f0",
+   "id": "b3d3990d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13ca5be8",
+   "id": "97d24474",
    "metadata": {},
    "source": [
     "## Predict Tweet\n",
@@ -594,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 411,
-   "id": "9a52659b",
+   "id": "c00a9047",
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 412,
-   "id": "ba37110d",
+   "id": "35bdddef",
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 413,
-   "id": "88165b76",
+   "id": "5a99f6b1",
    "metadata": {},
    "outputs": [
     {
@@ -658,16 +660,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7bed699",
+   "id": "7cffadaa",
    "metadata": {},
    "source": [
-    "#### The accuracy score is 67.7 %"
+    "#### The accuracy score is 65.05 %"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3275dddf",
+   "id": "3100b392",
    "metadata": {},
    "outputs": [],
    "source": []
