--- a/Logistic_Regression/Logistic_Regression.ipynb
+++ b/Logistic_Regression/Logistic_Regression.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "#  Logistic Regression in KDB+\n",
     "\n",
-    "## Find sentiment of tweet (Binary Classification)"
+    "### Find sentiment of tweet (Binary Classification)"
    ]
   },
   {
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b768eb59",
+   "id": "154d7879",
    "metadata": {},
    "source": [
     "### Prepare the data\n",
@@ -162,11 +162,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 414,
    "id": "f2672caa",
    "metadata": {},
    "outputs": [],
    "source": [
+    "/ Create word frequency table\n",
     "fun:{[df]\n",
     "    w:()!();\n",
     "    v:()!();\n",
@@ -190,22 +191,6 @@
     "    :0!(0^(pos_t uj neg_t))\n",
     "    };"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7bd239ca",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dc2b16c5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -378,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 400,
-   "id": "6793466e",
+   "id": "44611ae3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c366b56",
+   "id": "6c2691b1",
    "metadata": {},
    "source": [
     "## Process tweet\n",
@@ -407,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": 401,
-   "id": "40ddf055",
+   "id": "d4d38d43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": 402,
-   "id": "d720f286",
+   "id": "fff5c606",
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9196ae15",
+   "id": "771acade",
    "metadata": {},
    "source": [
     "## Extracting the features\n",
@@ -458,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": 403,
-   "id": "4b2d9a63",
+   "id": "b1fefca9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 404,
-   "id": "d8d4040a",
+   "id": "c6d951ad",
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28771577",
+   "id": "813148f4",
    "metadata": {},
    "source": [
     "## Training Model\n",
@@ -508,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 405,
-   "id": "d62c2682",
+   "id": "ecfb0e20",
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": 406,
-   "id": "deb19bc7",
+   "id": "5ddb3213",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": 407,
-   "id": "3ac0b302",
+   "id": "fa483cef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": 408,
-   "id": "768aed4a",
+   "id": "73ffa4c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": 409,
-   "id": "0943923b",
+   "id": "9c468edc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": 410,
-   "id": "b3d3990d",
+   "id": "fe94ac09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97d24474",
+   "id": "c898cda6",
    "metadata": {},
    "source": [
     "## Predict Tweet\n",
@@ -596,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": 411,
-   "id": "c00a9047",
+   "id": "e5621b3f",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 412,
-   "id": "35bdddef",
+   "id": "ee39f832",
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": 413,
-   "id": "5a99f6b1",
+   "id": "f3360cdc",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +645,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cffadaa",
+   "id": "5cb849d0",
    "metadata": {},
    "source": [
     "#### The accuracy score is 65.05 %"
@@ -669,7 +654,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3100b392",
+   "id": "3f7b7fbf",
    "metadata": {},
    "outputs": [],
    "source": []
