--- a/Logistic_Regression/Logistic_Regression_in_KDB.ipynb
+++ b/Logistic_Regression/Logistic_Regression_in_KDB.ipynb
@@ -339,7 +339,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "1294229d",
+   "id": "b9a34f12",
    "metadata": {},
    "source": [
     "Repeate the process until the we get low loss rate.\n",
@@ -589,7 +589,7 @@
     "\n",
     "Predict tweet function will return the sigmoid value of given word. \n",
     "\n",
-    "* value > 0.5 ---> Positive\n",
+    "* value => 0.5 ---> Positive\n",
     "* value < 0.5 ---> Negative"
    ]
   },
