--- a/Logistic_Regression/Logistic_Regression_in_KDB.ipynb
+++ b/Logistic_Regression/Logistic_Regression_in_KDB.ipynb
@@ -32,8 +32,8 @@
     "### Prepare the data\n",
     "* The `twitter_samples` contains subsets of five thousand positive_tweets, five thousand negative_tweets, and the full set of 10,000 tweets.  \n",
     "\n",
-    "* 8000 Data for testing\n",
-    "* 2000 Data for training"
+    "* 8000 Data for training\n",
+    "* 2000 Data for testing"
    ]
   },
   {
